--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -40,7 +40,6 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:drawableStart="@drawable/ic_baseline_lock_24"
-            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
             android:drawablePadding="10dp"
             android:hint="@string/password_hint"
             android:importantForAutofill="no"
@@ -68,7 +67,6 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:drawableStart="@drawable/ic_baseline_lock_24"
-            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
             android:drawablePadding="10dp"
             android:hint="@string/password_hint"
             android:importantForAutofill="no"
@@ -96,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:drawableStart="@drawable/ic_baseline_lock_24"
-            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
+
             android:drawablePadding="10dp"
             android:hint="@string/password_hint"
             android:importantForAutofill="no"
@@ -113,6 +111,9 @@
             android:layout_marginTop="40dp"
             android:layout_marginBottom="64dp"
             android:text="@string/change_password"
+            android:textColor="#ffff"
+            android:padding="10dp"
+            android:background="@drawable/button_shape"
             android:textAllCaps="false"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -121,6 +122,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_change_password_repeat_password"
             app:layout_constraintVertical_bias="1.0" />
+
+        <ImageButton
+            android:id="@+id/fragment_change_password_current_password_visibility_button"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:background="@null"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_remove_red_eye_24"
+            app:layout_constraintBottom_toBottomOf="@+id/fragment_change_password_current_password"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_current_password"
+            app:layout_constraintTop_toTopOf="@+id/fragment_change_password_current_password" />
+
+        <ImageButton
+            android:id="@+id/fragment_change_password_new_password_visibility_button"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:background="@null"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_remove_red_eye_24"
+            app:layout_constraintBottom_toBottomOf="@+id/fragment_change_password_new_password"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_new_password"
+            app:layout_constraintTop_toTopOf="@+id/fragment_change_password_new_password" />
+
+        <ImageButton
+            android:id="@+id/fragment_change_password_repeat_password_visibility_button"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:background="@null"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_remove_red_eye_24"
+            app:layout_constraintBottom_toBottomOf="@+id/fragment_change_password_repeat_password"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_repeat_password"
+            app:layout_constraintTop_toTopOf="@+id/fragment_change_password_repeat_password" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
