--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -46,7 +46,7 @@
         android:id="@+id/fragment_search_searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:background="@drawable/edii_text_background"
         android:layout_marginHorizontal="15dp"
         android:iconifiedByDefault="false"
         android:queryBackground="@android:color/transparent"
